--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
 async-generator==1.10
 attrs==22.1.0
+cachetools==5.2.0
 certifi==2022.9.24
+charset-normalizer==2.1.1
 exceptiongroup==1.0.0rc9
+google-auth==2.13.0
+google-auth-oauthlib==0.7.0
+gspread==5.6.2
 h11==0.14.0
 idna==3.4
 install==1.3.5
+oauthlib==3.2.2
 outcome==1.2.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 PySocks==1.7.1
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
 selenium==4.5.0
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.22.0
