--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ outcome==1.2.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PySocks==1.7.1
+pytz==2022.6
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
