--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,16 @@ cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 exceptiongroup==1.0.0rc9
-google-auth==2.13.0
-google-auth-oauthlib==0.7.0
+google-api-core==2.11.0
+google-api-python-client==2.82.0
+google-auth==2.16.2
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+google-cloud-bigquery==3.7.0
+google-cloud-core==2.3.2
+google-crc32c==1.5.0
+google-resumable-media==2.4.1
+googleapis-common-protos==1.58.0
 gspread==5.6.2
 h11==0.14.0
 idna==3.4
@@ -27,3 +35,4 @@ trio==0.22.0
 trio-websocket==0.9.2
 urllib3==1.26.12
 wsproto==1.2.0
+pandas==1.5.2
